# mockify

./: .hgignore  .travis.yml  README.md  TODO.md  contributors.txt  mockify.py  test_mockify.py
mockify/: mockify.py  test_mockify.py
sample/: CMakeLists.txt  deps.c  deps.h  main.c  test_main.cpp  uut.c  uut.h
sample/mocks/: deps_mock.cpp
